dev: finish basic function call tree

--- a/assets/index.css
+++ b/assets/index.css
@@ -160,7 +160,7 @@ label.tree_label:before {
 
 :checked~label.tree_label:before {
     content: '–';
-    background: #dc3545;
+    background: #626161;
     line-height: 13px;
 }
 
