--- a/assets/index.css
+++ b/assets/index.css
@@ -95,6 +95,9 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .marked-item:hover {
@@ -175,8 +178,8 @@ label.tree_label:before {
 .tree li:before {
     position: absolute;
     top: 15px;
-    bottom: 0;
-    left: 8px;
+    bottom: -10px;
+    left: 9.5px;
     display: block;
     width: 0;
     border-left: 1px solid #ddd;
