dev: set text selected background, add ebpf tab

--- a/assets/index.css
+++ b/assets/index.css
@@ -92,6 +92,11 @@ body {
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
+.tree-container ::selection {
+    background: #09090b;
+    color: #fff;
+}
+
 .tree {
     flex: 1;
     font-size: 14px;
